--- a/CARTELPAY.html
+++ b/CARTELPAY.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CartelUG | Seamless Payments</title>
+  <title>CartelUG | Seamless Mobile Money Payments</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
@@ -21,7 +21,7 @@
       color: #333;
     }
     .container {
-      max-width: 800px;
+      max-width: 700px;
       margin: 20px;
       padding: 40px;
       background-color: #ffffff;
@@ -75,58 +75,57 @@
       font-weight: 600;
       margin-bottom: 10px;
     }
+    .instructions {
+      margin-top: 20px;
+      font-size: 16px;
+      line-height: 1.5;
+      color: #666;
+      background-color: #f9fafb;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: left;
+    }
+    .instructions p {
+      margin-bottom: 10px;
+    }
     button {
       background-color: #00A368;
       color: #fff;
-      padding: 10px 25px;
+      padding: 12px 25px;
       border: none;
       border-radius: 5px;
       font-size: 16px;
       font-weight: 600;
       cursor: pointer;
       transition: background-color 0.3s ease;
+      margin-top: 20px;
     }
     button:hover {
       background-color: #008a5b;
-    }
-    .footer-note {
-      font-size: 12px;
-      color: #888;
-      margin-top: 30px;
     }
   </style>
 </head>
 <body>
 
   <div class="container">
-    <h1>CartelUG Subscription</h1>
+    <h1>CartelUG Subscription Payment</h1>
 
     <div class="service-section">
       <div class="service-title">Netflix Plans</div>
       <div class="options">
-        <div class="option" onclick="makePayment('Netflix', 1, 25000)">
+        <div class="option" onclick="showPaymentOptions('Netflix', 'https://wa.link/pbjnh1')">
           <h3>1 Month</h3>
           <div class="price">25,000 UGX</div>
           <button>Pay Now</button>
         </div>
-        <div class="option" onclick="makePayment('Netflix', 2, 40000)">
+        <div class="option" onclick="showPaymentOptions('Netflix', 'https://wa.link/pbjnh1')">
           <h3>2 Months</h3>
           <div class="price">40,000 UGX</div>
           <button>Pay Now</button>
         </div>
-        <div class="option" onclick="makePayment('Netflix', 3, 60000)">
+        <div class="option" onclick="showPaymentOptions('Netflix', 'https://wa.link/pbjnh1')">
           <h3>3 Months</h3>
           <div class="price">60,000 UGX</div>
-          <button>Pay Now</button>
-        </div>
-        <div class="option" onclick="makePayment('Netflix', 6, 120000)">
-          <h3>6 Months</h3>
-          <div class="price">120,000 UGX</div>
-          <button>Pay Now</button>
-        </div>
-        <div class="option" onclick="makePayment('Netflix', 12, 240000)">
-          <h3>1 Year</h3>
-          <div class="price">240,000 UGX</div>
           <button>Pay Now</button>
         </div>
       </div>
@@ -135,72 +134,37 @@
     <div class="service-section">
       <div class="service-title">Spotify Plans</div>
       <div class="options">
-        <div class="option" onclick="makePayment('Spotify', 2, 20000)">
+        <div class="option" onclick="showPaymentOptions('Spotify', 'https://wa.link/g73rbg')">
           <h3>2 Months</h3>
           <div class="price">20,000 UGX</div>
           <button>Pay Now</button>
         </div>
-        <div class="option" onclick="makePayment('Spotify', 3, 30000)">
+        <div class="option" onclick="showPaymentOptions('Spotify', 'https://wa.link/g73rbg')">
           <h3>3 Months</h3>
           <div class="price">30,000 UGX</div>
-          <button>Pay Now</button>
-        </div>
-        <div class="option" onclick="makePayment('Spotify', 6, 60000)">
-          <h3>6 Months</h3>
-          <div class="price">60,000 UGX</div>
-          <button>Pay Now</button>
-        </div>
-        <div class="option" onclick="makePayment('Spotify', 12, 120000)">
-          <h3>1 Year</h3>
-          <div class="price">120,000 UGX</div>
           <button>Pay Now</button>
         </div>
       </div>
     </div>
 
-    <div class="footer-note">
-      <p>Payment is powered by Flutterwave. Please have your phone ready for payment confirmation.</p>
+    <div id="instructions" class="instructions" style="display: none;">
+      <p><strong>Payment Instructions:</strong></p>
+      <p>Please send the payment amount to either of the following mobile money accounts:</p>
+      <ul>
+        <li><strong>MTN:</strong> 0762193386 - Account Name: Alfred</li>
+        <li><strong>Airtel:</strong> 0744688623 - Account Name: Alfred</li>
+      </ul>
+      <p>After completing the payment, click the "Confirm Payment" button below to notify us.</p>
+      <button id="confirmBtn">Confirm Payment</button>
     </div>
   </div>
 
-  <script src="https://checkout.flutterwave.com/v3.js"></script>
   <script>
-    function makePayment(service, months, amount) {
-      let phoneNumber = prompt("Enter your phone number beginning with 256 (e.g., 256708xxxxxx):");
-      if (!phoneNumber || !/^256\d{9}$/.test(phoneNumber)) {
-        alert("Please enter a valid phone number starting with 256.");
-        return;
-      }
-
-      const txRef = `TX-${Math.floor(Math.random() * 1000000)}`;
-      
-      FlutterwaveCheckout({
-        public_key: "FLWPUBK-52e4e9c7860c5e9b4a0df369b585f0fe-X",
-        tx_ref: txRef,
-        amount: amount,
-        currency: "UGX",
-        payment_options: "mobilemoneyuganda",
-        redirect_url: "https://wa.link/4s3yih",
-        customer: {
-          email: "carteluganda@gmail.com",
-          phonenumber: phoneNumber,
-          name: "Customer"
-        },
-        customizations: {
-          title: `${service} Subscription`,
-          description: `Payment for ${service} - ${months} months`
-        },
-        callback: function(response) {
-          if (response.status === "successful") {
-            alert("Payment successful! Thank you for your subscription.");
-          } else {
-            alert("Payment failed. Please try again.");
-          }
-        },
-        onclose: function() {
-          console.log("Payment process closed.");
-        }
-      });
+    function showPaymentOptions(service, confirmationLink) {
+      document.getElementById('instructions').style.display = 'block';
+      document.getElementById('confirmBtn').onclick = function() {
+        window.location.href = confirmationLink;
+      };
     }
   </script>
 </body>
