--- a/CARTELPAY.html
+++ b/CARTELPAY.html
@@ -75,19 +75,6 @@
       font-weight: 600;
       margin-bottom: 10px;
     }
-    .instructions {
-      margin-top: 20px;
-      font-size: 16px;
-      line-height: 1.5;
-      color: #666;
-      background-color: #f9fafb;
-      padding: 20px;
-      border-radius: 10px;
-      text-align: left;
-    }
-    .instructions p {
-      margin-bottom: 10px;
-    }
     button {
       background-color: #00A368;
       color: #fff;
@@ -102,6 +89,56 @@
     }
     button:hover {
       background-color: #008a5b;
+    }
+    /* Modal styles */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+    }
+    .modal-content {
+      background-color: #ffffff;
+      padding: 30px;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 500px;
+      text-align: center;
+      position: relative;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+    }
+    .modal-content h2 {
+      color: #00A368;
+      margin-bottom: 15px;
+      font-size: 22px;
+    }
+    .modal-content p {
+      color: #555;
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
+    .modal-content ul {
+      text-align: left;
+      margin: 10px 0;
+      padding-left: 20px;
+    }
+    .modal-content li {
+      margin: 8px 0;
+      font-size: 15px;
+    }
+    .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 18px;
+      cursor: pointer;
+      color: #888;
     }
   </style>
 </head>
@@ -128,6 +165,16 @@
           <div class="price">60,000 UGX</div>
           <button>Pay Now</button>
         </div>
+        <div class="option" onclick="showPaymentOptions('Netflix', 'https://wa.link/pbjnh1')">
+          <h3>6 Months</h3>
+          <div class="price">120,000 UGX</div>
+          <button>Pay Now</button>
+        </div>
+        <div class="option" onclick="showPaymentOptions('Netflix', 'https://wa.link/pbjnh1')">
+          <h3>1 Year</h3>
+          <div class="price">240,000 UGX</div>
+          <button>Pay Now</button>
+        </div>
       </div>
     </div>
 
@@ -144,27 +191,51 @@
           <div class="price">30,000 UGX</div>
           <button>Pay Now</button>
         </div>
+        <div class="option" onclick="showPaymentOptions('Spotify', 'https://wa.link/g73rbg')">
+          <h3>6 Months</h3>
+          <div class="price">60,000 UGX</div>
+          <button>Pay Now</button>
+        </div>
+        <div class="option" onclick="showPaymentOptions('Spotify', 'https://wa.link/g73rbg')">
+          <h3>1 Year</h3>
+          <div class="price">120,000 UGX</div>
+          <button>Pay Now</button>
+        </div>
       </div>
     </div>
+  </div>
 
-    <div id="instructions" class="instructions" style="display: none;">
-      <p><strong>Payment Instructions:</strong></p>
-      <p>Please send the payment amount to either of the following mobile money accounts:</p>
+  <!-- Payment Modal -->
+  <div id="paymentModal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" onclick="closeModal()">&times;</span>
+      <h2>Payment Instructions</h2>
+      <p>Please send the payment to one of the following mobile money numbers:</p>
       <ul>
-        <li><strong>MTN:</strong> 0762193386 - Account Name: Alfred</li>
-        <li><strong>Airtel:</strong> 0744688623 - Account Name: Alfred</li>
+        <li><strong>MTN:</strong> 0762193386 (Account Name: Alfred)</li>
+        <li><strong>Airtel:</strong> 0744688623 (Account Name: Alfred)</li>
       </ul>
-      <p>After completing the payment, click the "Confirm Payment" button below to notify us.</p>
+      <p>Once you've sent the payment, click the "Confirm Payment" button to notify us.</p>
       <button id="confirmBtn">Confirm Payment</button>
     </div>
   </div>
 
   <script>
     function showPaymentOptions(service, confirmationLink) {
-      document.getElementById('instructions').style.display = 'block';
+      document.getElementById('paymentModal').style.display = 'flex';
       document.getElementById('confirmBtn').onclick = function() {
         window.location.href = confirmationLink;
       };
+    }
+
+    function closeModal() {
+      document.getElementById('paymentModal').style.display = 'none';
+    }
+
+    window.onclick = function(event) {
+      if (event.target == document.getElementById('paymentModal')) {
+        closeModal();
+      }
     }
   </script>
 </body>
